# rate-my-claim

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202505140001_initial_schema.py  202505160001_phase3_auth_tokens.py  202505170001_anonymous_pending_submissions.py  202505180001_phase6_evidence_ingestion.py  202505190001_pending_linked_claim.py
backend/app/: __init__.py  main.py
backend/app/core/: brute_force.py  cache.py  celery_metrics.py  config.py  csrf.py  enrichment_pipeline_config.py  events.py  logging.py  metrics.py  rate_limit.py  request_context.py  security.py  telemetry.py
backend/app/db/: base.py  session.py  sync_session.py
backend/app/models/: __init__.py  ai_analysis.py  audit.py  auth_token.py  claim.py  evidence.py  evidence_artifact.py  evidence_chunk.py  evidence_feed.py  ingestion.py  moderation.py  publisher.py  reputation.py  user.py
backend/app/repositories/: __init__.py  ai_analysis_repository.py  audit_repository.py  auth_token_repository.py  base.py  claims_repository.py  evidence_artifact_repository.py  evidence_feed_repository.py  evidence_repository.py  graph_repository.py  ingestion_job_repository.py  platform_repository.py  search_repository.py  users_repository.py
backend/config/: enrichment_pipeline.yaml  reputable_sources.yaml
backend/scripts/: seed_development.py  seed_graph_demo.py
backend/tests/: conftest.py  test_anonymous_submit.py  test_assessment_provenance.py  test_atlas_api.py  test_claim_ai_analysis_flow.py  test_claim_ai_moderation.py  test_embedding_atlas.py  test_enrichment_context_builder.py  test_enrichment_pipeline_config.py  test_enrichment_retrieval.py  test_health.py  test_phase10_observability.py  test_phase11_api_integration.py  test_phase11_celery.py  test_phase11_migrations.py  test_phase11_repositories.py  test_phase11_unit_services.py  test_phase2_pgvector_integration.py  test_phase2_repositories.py  test_phase3_auth.py  test_phase4_ingestion.py  test_phase5_ai_provider.py  test_phase6_evidence.py  test_phase7_search.py  test_phase9_graph_timeline.py  test_pipeline_labels.py  test_public_submit_no_urls.py  test_source_discovery.py  test_submit_duplicate_guard.py  test_truth_resolution.py
docs/: operations.md
(+167 files in other folders)
